; ModuleID = '/home/carl/AnghaBench/oss-fuzz/projects/tidy-html5/extr_tidy_fuzzer.c_LLVMFuzzerTestOneInput.c'
source_filename = "/home/carl/AnghaBench/oss-fuzz/projects/tidy-html5/extr_tidy_fuzzer.c_LLVMFuzzerTestOneInput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LLVMFuzzerTestOneInput(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = call i32 @tidyBufInit(i32* %5)
  %9 = call i32 @tidyBufInit(i32* %6)
  %10 = call i32 @tidyBufInit(i32* %7)
  %11 = load i32*, i32** %3, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @tidyBufAttach(i32* %5, i32* %11, i64 %12)
  %14 = call i32 @run_tidy_parser(i32* %5, i32* %6, i32* %7)
  %15 = call i32 @tidyBufFree(i32* %7)
  %16 = call i32 @tidyBufFree(i32* %6)
  %17 = call i32 @tidyBufDetach(i32* %5)
  ret i32 0
}

declare dso_local i32 @tidyBufInit(i32*) #1

declare dso_local i32 @tidyBufAttach(i32*, i32*, i64) #1

declare dso_local i32 @run_tidy_parser(i32*, i32*, i32*) #1

declare dso_local i32 @tidyBufFree(i32*) #1

declare dso_local i32 @tidyBufDetach(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
